[package]
name = "helloworld-tonic"
version = "0.1.0"
authors = ["Ziyi Yan <ziyi.yan@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helloworld-server"
path = "src/server.rs"
[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tikv-client = { git = "https://github.com/tikv/client-rust.git" }

[build-dependencies]
tonic-build = "0.4"